--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,32 +6,46 @@
     <uses-permission android:name="android.permission.READ_PROFILE"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+
 
     <application
             android:allowBackup="true"
-            android:icon="@drawable/logo"
+            android:icon="@drawable/logo_icoapp"
             android:label="NcoN"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-                  android:label="Auth">
+        <activity
+                android:name=".MainActivity"
+                android:label="NcoN">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".RegActivity"
-                  android:label="Registration">
+        <activity
+                android:name=".RegActivity"
+                android:label="Registration">
         </activity>
-        <activity android:name=".RecoveryActivity"
-                  android:label="Recovery">
+        <activity
+                android:name=".RecoveryActivity"
+                android:label="Recovery">
         </activity>
-        <activity android:name=".ValidationActivity"
-                  android:label="Validation">
+        <activity
+                android:name=".ValidationActivity"
+                android:label="Validation">
+        </activity>
+        <activity
+                android:name=".AccountActivity"
+                android:label="@string/title_activity_account"
+                android:parentActivityName=".MainActivity"
+                android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="ncon.barsu.edu.client.MainActivity"/>
         </activity>
     </application>
 
